tests/match_orpat_var_type_mismatch2.test
print (match `A 3.2 with 
    | `A y
    | `B y: int -> y +. 2.1
);

####
TypeError: Value is required to have type float by the +. operator expression here:
print (match `A 3.2 with 
    | `A y
    | `B y: int -> y +. 2.1
                   ^        
);
However, that value may have type int here:
print (match `A 3.2 with 
    | `A y
    | `B y: int -> y +. 2.1
            ^~~             
);
Hint: To narrow down the cause of the type mismatch, consider adding an explicit type annotation here:
print (match `A 3.2 with 
    | `A y
    | `B y: int -> (let y: _ = y; y +. 2.1)
                   +++++++++++++++        + 
);
